[client]: added type safety to the reducers and contexts

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,3 +2,9 @@ body {
   width: 100vw;
   height: 100vh;
 }
+
+.scroll-wrapper {
+  margin-top: 10px;
+  height: 520px;
+  overflow: hidden scroll;
+}
